// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Peer - Apply Mapping Button should show a disabled Mapped button, when mapped is true 1`] = `
<pf-apply-mapping-button
  applyMapping={[Function EventEmitter]}
  mapped={[Function Boolean]}
>
  <button
    class="btn btn-sm btn-outline-dark"
    disabled=""
    type="button"
  >
     Matched
  
  </button>
</pf-apply-mapping-button>
`;

exports[`Peer - Apply Mapping Button should show an apply mapping button with a .btn-primary class, when it is the selected mapping 1`] = `
<pf-apply-mapping-button
  applyMapping={[Function EventEmitter]}
  selectedMapping={[Function Boolean]}
>
  <button
    class="btn btn-sm btn-primary"
  >
    
    <span>
       Match 
    </span>
    
    
  </button>
</pf-apply-mapping-button>
`;

exports[`Peer - Apply Mapping Button should show an apply mapping button, when using the defaults 1`] = `
<pf-apply-mapping-button
  applyMapping={[Function EventEmitter]}
>
  <button
    class="btn btn-sm btn-outline-primary"
  >
    
    <span>
       Match 
    </span>
    
    
  </button>
</pf-apply-mapping-button>
`;

exports[`Peer - Apply Mapping Button should show an applying mapping... button with a loading indicator,
      when it is the selected mapping and we are applying the mapping 1`] = `
<pf-apply-mapping-button
  applyMapping={[Function EventEmitter]}
  applyingMapping={[Function Boolean]}
  selectedMapping={[Function Boolean]}
>
  <button
    class="btn btn-sm btn-primary"
  >
    
    
    
    <span>
      <pf-loading-indicator />
       Matching... 
    </span>
  </button>
</pf-apply-mapping-button>
`;

exports[`Peer - Apply Mapping Button should show an error message under a Retry button, when an error has occurred and it is the selected mapping 1`] = `
<pf-apply-mapping-button
  applyMapping={[Function EventEmitter]}
  applyingMappingError={[Function Boolean]}
  selectedMapping={[Function Boolean]}
>
  <button
    class="btn btn-sm btn-outline-primary"
  >
    
    
    <span>
       Retry 
    </span>
    
  </button><span
    class="error-applying-message text-danger"
  >
    <fa-icon />
     Error Matching Job
  
  </span>
</pf-apply-mapping-button>
`;
